[metadata]
name = ebpf-firewall
summary = An experimental software firewall with ebpf dataplane.
description_file =
    README.md
author = Zhang Xiaoyu
author-email = zhangxiaoyu@knightdusk.cn
home-page = https://github.com/gszxy/ebpf-firewall
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: System :: Security

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = find:

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/
warning-is-error = 1
